@@ -28,6 +28,7 @@ Version 5.6.0 (TBD)
     Fixed some incorrect types in the new TypeScript declaration file #TINY-6413
     Fixed a regression whereby a fake offscreen selection element was incorrectly created for the editor root node #TINY-6555
     Fixed an issue where menus would incorrectly collapse in small containers #TINY-3321
+    Fixed an issue where only one table column at a time could be converted to a header #TINY-6326 
     Fixed some minor memory leaks that prevented garbage collection for editor instances #TINY-6570
     Fixed resizing a `responsive` table not working when using the column resize handles #TINY-6601
     Fixed an issue where spaces were not preserved in pre-blocks when getting text content #TINY-6448
